--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
 .active {
-  @apply font-bold tracking-wide  transition-colors duration-200  border-b-2 border-yellow-600;
+  @apply font-bold text-[#FF6AAF] tracking-wide  transition-colors duration-200  border-b-2 border-[#FF6AAF];
 }
 .my-container {
   @apply px-4  mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-2xl md:px-24 lg:px-8;
@@ -21,11 +19,23 @@
   @apply px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl md:px-24 lg:px-8 lg:py-20;
 }
 .btn-primary {
-  @apply inline-flex items-center h-12 px-6 mb-3 font-medium text-white transition duration-200 rounded shadow-md  md:mb-0 bg-gradient-to-r from-[#f34d4d] to-[#be4c4c] border-none;
+  @apply inline-flex items-center h-12 px-6 mb-3 font-medium text-white transition duration-200 rounded shadow-md  md:mb-0  border-none;
 }
 .btn-primary-2 {
   @apply inline-flex items-center h-12 px-6 mb-3 font-medium text-white transition duration-200 rounded shadow-md  md:mb-0 bg-gradient-to-r from-[#664df3] to-[#4c54be] hover:bg-blue-700;
 }
 .my-container-2 {
   @apply px-4 py-16 mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-lg md:px-24 lg:px-8 lg:py-8;
+}
+
+.gradient-button-4 {
+  background-image: linear-gradient(
+    to right,
+    #00d2ff 0%,
+    #3a7bd5 51%,
+    #00d2ff 100%
+  );
+}
+.gradient-button-4:hover {
+  background-position: right center;
 }
